@@ -246,7 +246,7 @@ class ServiceDefinition {
             //     non-null instanceof Boolean, then consider it not-empty (normally if false would eval to false)
             if (!parameterValue && !(parameterValue instanceof Boolean)) {
                 if (parameterNode."@required" == "true") {
-                    eci.message.addValidationError(null, "${namePrefix}${parameterName}", "Field cannot be empty (service ${getServiceName()})", null)
+                    eci.message.addValidationError(null, "${namePrefix}${parameterName}", getServiceName(), "Field cannot be empty", null)
                 }
                 // NOTE: should we change empty values to null? for now, no
                 // if it isn't there continue on since since default-value, etc are handled below
@@ -258,7 +258,7 @@ class ServiceDefinition {
                 parameterValue = converted
             } else if (parameterValue) {
                 // no type conversion? error time...
-                eci.message.addValidationError(null, "${namePrefix}${parameterName}", "Field was type [${parameterValue?.class?.name}], expecting type [${type}] (service ${getServiceName()})", null)
+                eci.message.addValidationError(null, "${namePrefix}${parameterName}", getServiceName(), "Field was type [${parameterValue?.class?.name}], expecting type [${type}]", null)
                 continue
             }
 
@@ -376,7 +376,7 @@ class ServiceDefinition {
                 }
 
                 if (!valueFound)
-                    eci.message.addValidationError(null, "${namePrefix}${parameterName}", "Field cannot be empty (service ${getServiceName()})", null)
+                    eci.message.addValidationError(null, "${namePrefix}${parameterName}", getServiceName(), "Field cannot be empty", null)
             }
         }
     }
@@ -416,7 +416,7 @@ class ServiceDefinition {
                     case "java.math.BigInteger":
                         BigDecimal bdVal = eci.l10n.parseNumber(parameterValue, format)
                         if (bdVal == null) {
-                            eci.message.addValidationError(null, "${namePrefix}${parameterName}", "Value [${parameterValue}] could not be converted to a ${type}" + (format ? " using format [${format}]": ""), null)
+                            eci.message.addValidationError(null, "${namePrefix}${parameterName}", getServiceName(), "Value [${parameterValue}] could not be converted to a ${type}" + (format ? " using format [${format}]": ""), null)
                         } else {
                             converted = StupidUtilities.basicConvert(bdVal, type)
                         }
@@ -425,21 +425,21 @@ class ServiceDefinition {
                     case "java.sql.Time":
                         converted = eci.l10n.parseTime(parameterValue, format)
                         if (converted == null) {
-                            eci.message.addValidationError(null, "${namePrefix}${parameterName}", "Value [${parameterValue}] could not be converted to a ${type}" + (format ? " using format [${format}]": ""), null)
+                            eci.message.addValidationError(null, "${namePrefix}${parameterName}", getServiceName(), "Value [${parameterValue}] could not be converted to a ${type}" + (format ? " using format [${format}]": ""), null)
                         }
                         break
                     case "Date":
                     case "java.sql.Date":
                         converted = eci.l10n.parseDate(parameterValue, format)
                         if (converted == null) {
-                            eci.message.addValidationError(null, "${namePrefix}${parameterName}", "Value [${parameterValue}] could not be converted to a ${type}" + (format ? " using format [${format}]": ""), null)
+                            eci.message.addValidationError(null, "${namePrefix}${parameterName}", getServiceName(), "Value [${parameterValue}] could not be converted to a ${type}" + (format ? " using format [${format}]": ""), null)
                         }
                         break
                     case "Timestamp":
                     case "java.sql.Timestamp":
                         converted = eci.l10n.parseTimestamp(parameterValue, format)
                         if (converted == null) {
-                            eci.message.addValidationError(null, "${namePrefix}${parameterName}", "Value [${parameterValue}] could not be converted to a ${type}" + (format ? " using format [${format}]": ""), null)
+                            eci.message.addValidationError(null, "${namePrefix}${parameterName}", getServiceName(), "Value [${parameterValue}] could not be converted to a ${type}" + (format ? " using format [${format}]": ""), null)
                         }
                         break
                 }
@@ -487,7 +487,7 @@ class ServiceDefinition {
                 if (!validateParameterSingle(child, parameterName, pv, eci)) allPass = false
             } catch (Throwable t) {
                 logger.error("Error in validation", t)
-                eci.message.addValidationError(null, parameterName, "Value [${pv}] failed [${child.name()}] validation (${t.message})", null)
+                eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${pv}] failed [${child.name()}] validation (${t.message})", null)
             }
         }
         return allPass
@@ -510,12 +510,12 @@ class ServiceDefinition {
             return !allPass
         case "matches":
             if (!(pv instanceof String)) {
-                eci.message.addValidationError(null, parameterName, "Value [${pv}] is not a String, cannot do matches validation.", null)
+                eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${pv}] is not a String, cannot do matches validation.", null)
                 return false
             }
             if (valNode."@regexp" && !((String) pv).matches((String) valNode."@regexp")) {
                 // a message attribute should always be there, but just in case we'll have a default
-                eci.message.addValidationError(null, parameterName, valNode."@message" ?: "Value [${pv}] did not match expression [${valNode."@regexp"}]", null)
+                eci.message.addValidationError(null, parameterName, getServiceName(), valNode."@message" ?: "Value [${pv}] did not match expression [${valNode."@regexp"}]", null)
                 return false
             }
             return true
@@ -526,12 +526,12 @@ class ServiceDefinition {
                 BigDecimal min = new BigDecimal((String) valNode."@min")
                 if (valNode."@min-include-equals" == "false") {
                     if (bdVal <= min) {
-                        eci.message.addValidationError(null, parameterName, "Value [${pv}] must be greater than ${min}.", null)
+                        eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${pv}] must be greater than ${min}.", null)
                         return false
                     }
                 } else {
                     if (bdVal < min) {
-                        eci.message.addValidationError(null, parameterName, "Value [${pv}] must be greater than or equal to ${min}.", null)
+                        eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${pv}] must be greater than or equal to ${min}.", null)
                         return false
                     }
                 }
@@ -540,12 +540,12 @@ class ServiceDefinition {
                 BigDecimal max = new BigDecimal((String) valNode."@max")
                 if (valNode."@max-include-equals" == "true") {
                     if (max > bdVal) {
-                        eci.message.addValidationError(null, parameterName, "Value [${pv}] must be less than or equal to ${max}.", null)
+                        eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${pv}] must be less than or equal to ${max}.", null)
                         return false
                     }
                 } else {
                     if (max >= bdVal) {
-                        eci.message.addValidationError(null, parameterName, "Value [${pv}] must be less than ${max}.", null)
+                        eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${pv}] must be less than ${max}.", null)
                         return false
                     }
                 }
@@ -555,7 +555,7 @@ class ServiceDefinition {
             try {
                 new BigInteger(pv as String)
             } catch (NumberFormatException e) {
-                eci.message.addValidationError(null, parameterName, "Value [${pv}] is not a whole (integer) number.", null)
+                eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${pv}] is not a whole (integer) number.", null)
                 return false
             }
             return true
@@ -563,7 +563,7 @@ class ServiceDefinition {
             try {
                 new BigDecimal(pv as String)
             } catch (NumberFormatException e) {
-                eci.message.addValidationError(null, parameterName, "Value [${pv}] is not a decimal number.", null)
+                eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${pv}] is not a decimal number.", null)
                 return false
             }
             return true
@@ -572,14 +572,14 @@ class ServiceDefinition {
             if (valNode."@min") {
                 int min = valNode."@min" as int
                 if (str.length() < min) {
-                    eci.message.addValidationError(null, parameterName, "Value [${pv}], length ${str.length()}, is shorter than ${min} characters.", null)
+                    eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${pv}], length ${str.length()}, is shorter than ${min} characters.", null)
                     return false
                 }
             }
             if (valNode."@max") {
                 int max = valNode."@max" as int
                 if (max >= str.length()) {
-                    eci.message.addValidationError(null, parameterName, "Value: [${pv}] length ${str.length()}, is longer than ${max} characters.", null)
+                    eci.message.addValidationError(null, parameterName, getServiceName(), "Value: [${pv}] length ${str.length()}, is longer than ${max} characters.", null)
                     return false
                 }
             }
@@ -587,14 +587,14 @@ class ServiceDefinition {
         case "text-email":
             String str = pv as String
             if (!emailValidator.isValid(str)) {
-                eci.message.addValidationError(null, parameterName, "Value [${str}] is not a valid email address.", null)
+                eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${str}] is not a valid email address.", null)
                 return false
             }
             return true
         case "text-url":
             String str = pv as String
             if (!urlValidator.isValid(str)) {
-                eci.message.addValidationError(null, parameterName, "Value [${str}] is not a valid URL.", null)
+                eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${str}] is not a valid URL.", null)
                 return false
             }
             return true
@@ -602,7 +602,7 @@ class ServiceDefinition {
             String str = pv as String
             for (char c in str) {
                 if (!Character.isLetter(c)) {
-                    eci.message.addValidationError(null, parameterName, "Value [${str}] must have only letters.", null)
+                    eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${str}] must have only letters.", null)
                     return false
                 }
             }
@@ -611,7 +611,7 @@ class ServiceDefinition {
             String str = pv as String
             for (char c in str) {
                 if (!Character.isDigit(c)) {
-                    eci.message.addValidationError(null, parameterName, "Value [${str}] must have only digits.", null)
+                    eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${str}] must have only digits.", null)
                     return false
                 }
             }
@@ -638,7 +638,7 @@ class ServiceDefinition {
                     compareCal = eci.l10n.parseDateTime(valString, format)
                 }
                 if (!cal.after(compareCal)) {
-                    eci.message.addValidationError(null, parameterName, "Value [${pv}] is before ${valString}.", null)
+                    eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${pv}] is before ${valString}.", null)
                     return false
                 }
             }
@@ -653,7 +653,7 @@ class ServiceDefinition {
                     compareCal = eci.l10n.parseDateTime(valString, format)
                 }
                 if (!cal.before(compareCal)) {
-                    eci.message.addValidationError(null, parameterName, "Value [${pv}] is after ${valString}.", null)
+                    eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${pv}] is after ${valString}.", null)
                     return false
                 }
             }
@@ -668,7 +668,7 @@ class ServiceDefinition {
             }
             String str = pv as String
             if (!ccv.isValid(str)) {
-                eci.message.addValidationError(null, parameterName, "Value [${str}] is not a valid credit card number.", null)
+                eci.message.addValidationError(null, parameterName, getServiceName(), "Value [${str}] is not a valid credit card number.", null)
                 return false
             }
             return true
@@ -683,7 +683,7 @@ class ServiceDefinition {
         try {
             value = StupidWebUtilities.defaultWebEncoder.canonicalize(parameterValue, true)
         } catch (IntrusionException e) {
-            eci.message.addValidationError(null, parameterName, "Found character escaping (mixed or double) that is not allowed or other format consistency error: " + e.toString(), null)
+            eci.message.addValidationError(null, parameterName, getServiceName(), "Found character escaping (mixed or double) that is not allowed or other format consistency error: " + e.toString(), null)
             return parameterValue
         }
 
@@ -694,7 +694,7 @@ class ServiceDefinition {
         } else {
             // check for "<", ">"; this will protect against HTML/JavaScript injection
             if (value.contains("<") || value.contains(">")) {
-                eci.message.addValidationError(null, parameterName, "Less-than (<) and greater-than (>) symbols are not allowed.", null)
+                eci.message.addValidationError(null, parameterName, getServiceName(), "Less-than (<) and greater-than (>) symbols are not allowed.", null)
             }
         }
 
